XSTOUCAN-12: In inline edit mode all the input fields are stretched to the full content width Fixed.
XWIKI-980: EventCalendar generates prev-next links forever
Added styling.


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk/albatross@8222 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-albatross/src/main/resources/albatross/wiki.css
+++ b/xwiki-platform-albatross/src/main/resources/albatross/wiki.css
@@ -280,11 +280,14 @@ ol.HEBREW { list-style-type: hebrew; }
 .wiki-calendar-month-nav{
   border: none !important;
 }
-.wiki-calendar-month-nav a{
+.wiki-calendar-month-nav *{
   font-size: 140%;
   font-weight: bold;
   color: #C0D4E7 !important;
   text-decoration: none;
+}
+.wiki-calendar-month-nav .disabled{
+  color: #aaa !important;
 }
 .wiki-calendar-month-nav a:hover{
   text-decoration: none !important;
